<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    android:label="@string/title_setting"
    app:startDestination="@+id/navigation_feed">

    <fragment
        android:id="@+id/navigation_feed"
        android:name="com.example.capstoneproject.FeedFragment"
        android:label="@string/title_feed"
        tools:layout="@layout/fragment_feed" >
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.capstoneproject.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" >
    </fragment>

    <fragment
        android:id="@+id/navigation_chatroom"
        android:name="com.example.capstoneproject.ChatroomFragment"
        android:label="@string/title_chatroom"
        tools:layout="@layout/fragment_chatroom" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.capstoneproject.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />



</navigation>